# joyride-python

./: .dockerignore  .flake8  .gitignore  .gitmodules  DEVELOPMENT.md  Dockerfile  Makefile  README.md  SWIMMIES_GIT_SETUP.md  SWIMMIES_SETUP.md  compose-onramp:.yaml  docker-compose.example.yml  docker-compose.yml  docker-entrypoint.sh  fix_test_names.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  validation_mixins_demo.py
.chat_planning/: CODE_REVIEW.md  DNS_SYNC_INTEGRATION.md  LIFECYCLE_REFACTORING_ANALYSIS.md  LIFECYCLE_REFACTORING_PROCEDURE.md  PROMPT_TEMPLATE_USAGE.md  REFACTOR_PLAN.md  SIMPLIFIED_LIFECYCLE_REFACTOR_PROMPT.md
.devcontainer/: Makefile  devcontainer.json  setup-dotfiles.sh
.github/: copilot-instructions.md
.github/instructions/: dockerfile.instructions.md  makefile.instructions.md  python.instructions.md  testing.instructions.md
.github/prompts/: lifecycle-refactor-step.prompt.md  lifecycle-step-1.prompt.md  lifecycle-step-2.prompt.md
.github/workflows/: docker-publish.yml
app/: __init__.py  dns_server.py  dns_sync_manager.py  docker_monitor.py  hosts_monitor.py  main.py
app/container/: config.py  lifecycle.py
app/container/providers/: __init__.py  base.py  class_provider.py
app/events/: __init__.py  bus.py  event_registry.py  filter.py  subscription.py
app/events/core/: __init__.py  event_base.py  event_handler.py  event_producer.py
app/events/registry/: __init__.py  filter.py  registry.py  subscription.py
app/events/types/: __init__.py  container.py  dns.py  error.py  file.py  health.py  node.py  system.py
app/injection/: __init__.py
app/injection/providers/: base.py  class_provider.py  factory_provider.py  prototype_provider.py  registry.py  singleton_provider.py
app/joyride/: __init__.py
app/joyride/events/: __init__.py  event.py  event_base.py  event_bus.py  event_factory.py  event_filter.py  event_handler.py  event_producer.py  event_registry.py  event_schemas.py  event_subscription.py  fields.py  registry.py  schemas.py  validation_mixins.py
app/joyride/events/types/: __init__.py  container_event.py  dns.py  dns_event.py  error.py  error_event.py  file.py  file_event.py  health.py  health_event.py  node_event.py  system_event.py
app/joyride/injection/: __init__.py  config.py  lifecycle.py
app/joyride/injection/lifecycle/: __init__.py  component.py  health.py  interfaces.py  orchestrator.py  provider_adapter.py  registry.py  types.py
app/joyride/injection/providers/: __init__.py  base.py  class_provider.py  factory_provider.py  prototype_provider.py  provider_base.py  provider_registry.py  singleton_provider.py
app/producers/: __init__.py  docker_events.py  docker_producer.py  event_producer.py  hosts_events.py  hosts_producer.py  swim_events.py  swim_producer.py  system_events.py  system_producer.py
app/static/css/: status.css
app/templates/: status.html
docker-tests/: compose-test.yaml
docs/: REFACTOR_PLAN.md
hosts/: .example.hosts  README.md  example.hosts  production.hosts
tests/: __init__.py  conftest.py  helpers.py  test_circular_dependency_prevention.py  test_container_config.py  test_container_lifecycle.py  test_container_providers.py  test_dns_sync_integration.py  test_docker_monitor.py  test_event_bus.py  test_event_factory.py  test_event_registry.py  test_event_schemas.py  test_field_descriptors.py  test_hosts_monitor.py  test_injection_config.py  test_injection_lifecycle.py  test_injection_providers.py  test_integration_circular_dependency_fix.py  test_main.py  test_producers.py  test_step_1_2_2_integration.py  test_system_producer.py  test_types_event_edge_cases.py  test_validation_mixins.py
tests/disabled/: README.md  test_event_types.py  test_events_base.py  test_main.py
tests/lifecycle/: test_component.py  test_health.py  test_integration.py  test_orchestrator.py  test_provider_adapter.py  test_registry.py  test_types.py
tests/support/: injection_helpers.py  pytest.ini
tests/unit/: test_event_types.py  test_events_base.py
