[project]
name = "joyride"
version = "0.0.1"
description = "Docker dynamic DNS server that uses labels"
readme = "README.md"
authors = [
    { name = "mike", email = "219478+ilude@users.noreply.github.com" }
]
license = "MIT"
requires-python = ">=3.12"
keywords = ["dns", "docker", "networking", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
dependencies = [
  "swimmies",
  "dnslib==0.9.24",
  "docker==7.1.0",
  "flask==3.0.0",
  "gunicorn==21.2.0",
  "pydantic==2.8.2",
  "python-dotenv==1.0.0",
  "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "black==23.12.1",
    "flake8==7.0.0", 
    "isort==5.13.2",
    "pytest==7.4.3",
    "pytest-flask==1.3.0",
    "pytest-cov==4.1.0",
]
test = [
    "pytest==7.4.3",
    "pytest-flask==1.3.0", 
    "pytest-cov==4.1.0",
]
lint = [
    "black==23.12.1",
    "flake8==7.0.0",
    "isort==5.13.2",
]

[project.urls]
Homepage = "https://github.com/ilude/joyride-python"
Repository = "https://github.com/ilude/joyride-python"
Issues = "https://github.com/ilude/joyride-python/issues"

[project.scripts]
joyride = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["hosts*", "tests*"]

[tool.setuptools]
py-modules = ["run"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "black>=23.12.1",
    "docker>=7.1.0",
    "flake8>=7.0.0",
    "isort>=5.13.2",
    "mypy>=1.17.1",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.14.1",
    "testcontainers[docker]>=4.12.0",
    "types-pyyaml>=6.0.12.20250516",
]

[tool.uv.sources]
swimmies = { workspace = true }

[tool.uv]
package = true

[tool.uv.workspace]
members = [
    "swimmies",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["app", "tests"]
known_first_party = ["app", "swimmies"]
